--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,4 +1,19 @@
+buildscript {
+    repositories {
+        maven { url 'https://maven.fabric.io/public' }
+    }
+
+    dependencies {
+        classpath 'io.fabric.tools:gradle:1.+'
+    }
+}
 apply plugin: 'com.android.application'
+apply plugin: 'io.fabric'
+
+repositories {
+    maven { url 'https://maven.fabric.io/public' }
+}
+
 apply plugin: 'kotlin-android'
 apply plugin: 'com.google.gms.google-services'
 apply plugin: 'kotlin-android-extensions'
@@ -51,7 +66,7 @@ android {
         enabled = true
     }
     productFlavors {
-        aws_pinkhd_sms_plus {
+        /*aws_pinkhd_sms_plus {
             applicationId "com.theme.sms.pinkhd.app"
             versionCode rootProject.ext.themeVersionCode
             versionName rootProject.ext.themeVersionName
@@ -59,7 +74,110 @@ android {
             playAccountConfig = playAccountConfigs.AweAccountConfig
             flavorDimensions "default"
         }
-
+        aws_pink_sms_plus {
+            applicationId "com.aws.sms.pink.app"
+            versionCode rootProject.ext.themeVersionCode
+            versionName rootProject.ext.themeVersionName
+            signingConfig signingConfigs.themesforsms
+            playAccountConfig = playAccountConfigs.AweAccountConfig
+            flavorDimensions "default"
+        }
+        aws_whatsapp_sms_plus {
+            applicationId "com.aws.sms.whatsapp.app"
+            versionCode rootProject.ext.themeVersionCode
+            versionName rootProject.ext.themeVersionName
+            signingConfig signingConfigs.themesforsms
+            playAccountConfig = playAccountConfigs.AweAccountConfig
+            flavorDimensions "default"
+        }
+        aws_messenger_sms_plus {
+            applicationId "com.aws.sms.messenger.app"
+            versionCode rootProject.ext.themeVersionCode
+            versionName rootProject.ext.themeVersionName
+            signingConfig signingConfigs.themesforsms
+            playAccountConfig = playAccountConfigs.AweAccountConfig
+            flavorDimensions "default"
+        }
+        aws_pinkapple_sms_plus {
+            applicationId "com.aws.sms.pinkapple.app"
+            versionCode rootProject.ext.themeVersionCode
+            versionName rootProject.ext.themeVersionName
+            signingConfig signingConfigs.themesforsms
+            playAccountConfig = playAccountConfigs.AweAccountConfig
+            flavorDimensions "default"
+        }
+        aws_galaxynote8_sms_plus {
+            applicationId "com.aws.sms.galaxynote8.app"
+            versionCode rootProject.ext.themeVersionCode
+            versionName rootProject.ext.themeVersionName
+            signingConfig signingConfigs.themesforsms
+            playAccountConfig = playAccountConfigs.AweAccountConfig
+            flavorDimensions "default"
+        }
+        aws_applepinkphone8_sms_plus {
+            applicationId "com.aws.sms.applepinkphone8.app"
+            versionCode rootProject.ext.themeVersionCode
+            versionName rootProject.ext.themeVersionName
+            signingConfig signingConfigs.themesforsms
+            playAccountConfig = playAccountConfigs.AweAccountConfig
+            flavorDimensions "default"
+        }
+        aws_pinkdiamondparis_sms_plus {
+            applicationId "com.aws.sms.pinkdiamondparis.app"
+            versionCode rootProject.ext.themeVersionCode
+            versionName rootProject.ext.themeVersionName
+            signingConfig signingConfigs.themesforsms
+            playAccountConfig = playAccountConfigs.AweAccountConfig
+            flavorDimensions "default"
+        }
+        aws_pinkphone8_sms_plus {
+            applicationId "com.aws.sms.pinkphone8.app"
+            versionCode rootProject.ext.themeVersionCode
+            versionName rootProject.ext.themeVersionName
+            signingConfig signingConfigs.themesforsms
+            playAccountConfig = playAccountConfigs.AweAccountConfig
+            flavorDimensions "default"
+        }
+        aws_pinkphonex_sms_plus {
+            applicationId "com.aws.sms.pinkphonex.app"
+            versionCode rootProject.ext.themeVersionCode
+            versionName rootProject.ext.themeVersionName
+            signingConfig signingConfigs.themesforsms
+            playAccountConfig = playAccountConfigs.AweAccountConfig
+            flavorDimensions "default"
+        }
+        aws_snapchat_sms_plus {
+            applicationId "com.aws.sms.snapchat.app"
+            versionCode rootProject.ext.themeVersionCode
+            versionName rootProject.ext.themeVersionName
+            signingConfig signingConfigs.themesforsms
+            playAccountConfig = playAccountConfigs.AweAccountConfig
+            flavorDimensions "default"
+        }
+        aws_telegram_sms_plus {
+            applicationId "com.aws.sms.telegram.app"
+            versionCode rootProject.ext.themeVersionCode
+            versionName rootProject.ext.themeVersionName
+            signingConfig signingConfigs.themesforsms
+            playAccountConfig = playAccountConfigs.AweAccountConfig
+            flavorDimensions "default"
+        }
+        aws_pixel_sms_plus {
+            applicationId "com.aws.sms.pixel.app"
+            versionCode rootProject.ext.themeVersionCode
+            versionName rootProject.ext.themeVersionName
+            signingConfig signingConfigs.themesforsms
+            playAccountConfig = playAccountConfigs.AweAccountConfig
+            flavorDimensions "default"
+        }
+*/       aws_halloween_sms_plus {
+            applicationId "com.aws.sms.halloween.app"
+            versionCode rootProject.ext.themeVersionCode
+            versionName rootProject.ext.themeVersionName
+            signingConfig signingConfigs.themesforsms
+            playAccountConfig = playAccountConfigs.AweAccountConfig
+            flavorDimensions "default"
+        }
     }
 }
 
@@ -80,4 +198,5 @@ dependencies {
     implementation project(':gdx-backend-android')
     implementation project(':gdx-test')
     implementation project(':rippereffects-v.1.0.3')
+    implementation 'com.crashlytics.sdk.android:crashlytics:2.9.9'
 }
