--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,6 +16,10 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <meta-data
+            android:name="io.fabric.ApiKey"
+            android:value="28d430d2519c0eb02541cf83852287a16b305ef4" />
     </application>
 
+    <uses-permission android:name="android.permission.INTERNET" />
 </manifest>
