--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,6 +16,10 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <meta-data
+            android:name="io.fabric.ApiKey"
+            android:value="1a76f34c70c859aca0de180551f2e7b00fd39e86" />
     </application>
 
+    <uses-permission android:name="android.permission.INTERNET" />
 </manifest>
