--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,4 +1,19 @@
+buildscript {
+    repositories {
+        maven { url 'https://maven.fabric.io/public' }
+    }
+
+    dependencies {
+        classpath 'io.fabric.tools:gradle:1.+'
+    }
+}
 apply plugin: 'com.android.application'
+apply plugin: 'io.fabric'
+
+repositories {
+    maven { url 'https://maven.fabric.io/public' }
+}
+
 apply plugin: 'kotlin-android'
 apply plugin: 'com.google.gms.google-services'
 apply plugin: 'kotlin-android-extensions'
@@ -60,6 +75,22 @@ android {
             playAccountConfig = playAccountConfigs.PerfectAccountConfig
             flavorDimensions "default"
         }
+        perfectthemes_freebutterfly_sms_plus {
+            applicationId "com.sms.perfectthemes.freebutterfly.app"
+            versionCode rootProject.ext.themeVersionCode
+            versionName rootProject.ext.themeVersionName
+            signingConfig signingConfigs.perfectthemes
+            playAccountConfig = playAccountConfigs.PerfectAccountConfig
+            flavorDimensions "default"
+        }
+        perfectthemes_freevampire_sms_plus {
+            applicationId "com.sms.perfectthemes.freevampire.app"
+            versionCode rootProject.ext.themeVersionCode
+            versionName rootProject.ext.themeVersionName
+            signingConfig signingConfigs.perfectthemes
+            playAccountConfig = playAccountConfigs.PerfectAccountConfig
+            flavorDimensions "default"
+        }
 
     }
 }
@@ -81,4 +112,5 @@ dependencies {
     implementation project(':gdx-backend-android')
     implementation project(':gdx-test')
     implementation project(':rippereffects-v.1.0.3')
+    implementation 'com.crashlytics.sdk.android:crashlytics:2.9.9'
 }
