--- a/app/build.gradle
+++ b/app/build.gradle
@@ -79,7 +79,7 @@ android {
 }
 
 dependencies {
-    implementation fileTree(dir: 'libs', include: ['*.jar'])
+    implementation fileTree(include: ['*.jar'], dir: 'libs')
     implementation 'com.android.support:appcompat-v7:28.0.0'
     implementation('com.github.themejunky:SMSLayout2019:1.0.11') {
 
@@ -90,10 +90,10 @@ dependencies {
         exclude group: 'com.github.themejunky', module: 'api'
         exclude group: 'com.github.themejunky', module: 'rippereffects-v.1.0.3'
     }
-    implementation project(':api')
     implementation project(':gdx')
     implementation project(':gdx-backend-android')
     implementation project(':gdx-test')
-    implementation project(':rippereffects-v.1.0.3')
     implementation 'com.crashlytics.sdk.android:crashlytics:2.9.9'
+    implementation project(':rippereffects-v.1.0.3')
+    implementation project(':api')
 }
